# CATAI

./: README.md  cat.swift  index.html
multiplatform/: package-lock.json  package.json
multiplatform/src/: cat.js  cute_orange_cat  index.html  settings.html  settings.js
multiplatform/src-tauri/: Cargo.toml  tauri.conf.json
multiplatform/src-tauri/icons/: icon.icns
multiplatform/src-tauri/src/: main.rs
